syntax = "proto3";

import "github.com/idoall/MicroService-UserPowerManager/srv/users/v1/proto/proto.proto";

package ProtoHistoryUserLogin;

// 登录历史相关操作
service ProtoHistoryUserLogin {
	// 添回一条记录
	rpc Add(AddRequest) returns (AddResponse) {}
}


message AddRequest {
    ProtoUsers.User User = 1;
    string GeoRemoteAddr = 2;
    string GeoCountry = 3;
    string GeoCity = 4;
    string DeviceDetector = 5;
}

message AddResponse {
	int64 NewID = 1;
}